# aframe

.github/: filters.yaml
libs/analysis/aframe/analysis/ledger/: events.py  injections.py  ledger.py
libs/analysis/tests/ledger/: test_events.py  test_injections.py
projects/sandbox/: pyproject.toml
projects/sandbox/datagen/: pyproject.toml
projects/sandbox/export/export/: main.py
projects/sandbox/plots/plots/: 2D_param_hist.py
projects/sandbox/train/train/: augmentor.py  data_structures.py  metrics.py  train.py
projects/sandbox/vizapp/: pyproject.toml
projects/sandbox/vizapp/vizapp/: app.py  main.py  structures.py
projects/sandbox/vizapp/vizapp/pages/: page.py
projects/sandbox/vizapp/vizapp/pages/analysis/: background.py  event_inspector.py  page.py
projects/sandbox/vizapp/vizapp/pages/data_summary/: page.py  param_hist.py  param_two_hist.py
projects/sandbox/vizapp/vizapp/pages/performance_summary/: page.py  sensitive_volume.py
