[tool.poetry]
name = "vizapp"
version = "0.1.0"
description = "Visualization application for analyzed aframe output"
authors = ["Alec Gunny <alecg@.mit.edu>"]
license = "MIT"

[tool.poetry.scripts]
vizapp = "vizapp.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bokeh = "^3.0"
scipy = "^1.7"
h5py = "^3.5"
lalsuite = "^7.10"
python-ligo-lw = "<1.8"
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
torch = {version = "^1.12", source = "torch"}

"aframe.analysis" = {path = "../../../libs/analysis", develop = true}
"aframe.logging" = {path = "../../../libs/logging", develop = true}
"aframe.priors" = {path = "../../../libs/priors", develop = true}
"aframe.architectures" = {path = "../../../libs/architectures", develop = true}
gwpy = ">2.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
